--- a/app/src/main/res/layout/activity_webview.xml
+++ b/app/src/main/res/layout/activity_webview.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -28,19 +27,10 @@
         android:text="@string/morenpifu"
         android:textAllCaps="false"
         android:textColor="@color/text_color" />
-    <Button
-        android:id="@+id/jumpWeb"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_10"
-        android:background="@color/text_bg_color"
-        android:text="跳转到web"
-        android:textAllCaps="false"
-        android:textColor="@color/text_color" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycleview"
+    <WebView
+        android:id="@+id/webview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/listview_bg_color" />
+        />
 </LinearLayout>
