--- a/app/src/main/res/layout/activity_three.xml
+++ b/app/src/main/res/layout/activity_three.xml
@@ -10,12 +10,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
-        android:gravity="center"
+        android:gravity="center_horizontal"
         android:background="@drawable/layout_image_bg"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
         <LinearLayout
+            android:layout_marginTop="20dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -93,6 +94,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/followSys" />
+        <Button
+            android:textAllCaps="false"
+            android:layout_marginTop="@dimen/dp_10"
+            android:layout_marginStart="@dimen/dp_10"
+            android:background="@color/text_bg_color"
+            android:textColor="@color/text_color"
+            android:id="@+id/smallFont"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/small_font" />
         <Button
             android:textAllCaps="false"
             android:layout_marginTop="@dimen/dp_10"
