--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,7 +69,7 @@
             android:background="@drawable/selector_white"
             android:padding="@dimen/dp_10"
             android:layout_marginTop="@dimen/dp_10"
-            android:layout_width="wrap_content"
+            android:layout_width="140dp"
             android:layout_height="wrap_content"
             android:text="@string/test1" />
 
